# MatrixFS

./: .gitignore  Cargo.toml  README.md
frontend/: bun.lockb  package.json  tailwind.config.ts
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/chunks/: entry.DQzotQwH.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: start.B7SV6Mp-.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.pKvNILbF.js  1.BX9nl6pd.js
frontend/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/chunks/: internal.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/components/: CopyBox.svelte
frontend/src/lib/components/: DataTable.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/ops/: +page.svelte
src/: main.rs
src-tauri/: Cargo.toml  Manifesto (1).pdf.mfs  important-command.sh  tauri.conf.json
src-tauri/src/: main.rs
testDir/: final_test.txt  final_test.txt.mfs  final_test_hash.txt  note.txt  note.txt.mfs
