[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mars Ultor"]
license = "None"
repository = "https://github.com/quan-thecreator/MatrixFS/"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [] }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
rand = "0.8.5"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
cipher-crypt = "0.18.0"
base64 = "0.22.1"
rfd = "0.14.1"
log = "0.4.22"
simple_logger = "5.0.0"
surrealdb = "1.0.0-beta.8"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
